--- a/solver/Makefile
+++ b/solver/Makefile
@@ -13,6 +13,8 @@ SRC = $(wildcard $(SRC_DIR)/*.c)
 TEST_SRC = $(wildcard $(TEST_SRC_DIR)/*.c)
 OBJ = $(patsubst $(SRC_DIR)/%.c,$(OBJ_DIR)/%.o,$(SRC))
 OBJ_WITHOUT_MAIN = $(filter-out $(OBJ_DIR)/main.o, $(OBJ))
+OBJ_WITHOUT_PY = $(filter-out $(OBJ_DIR)/diffusion_py.o, $(OBJ))
+OBJ_WITHOUT_MAIN_PY = $(filter-out $(OBJ_DIR)/diffusion_py.o, $(OBJ_WITHOUT_MAIN))
 TEST_OBJ = $(patsubst $(TEST_SRC_DIR)/%.c,$(TEST_OBJ_DIR)/%.o,$(TEST_SRC))
 BIN = $(wildcard $(BIN_DIR)/*.out)
 TEST_BIN = $(wildcard $(TEST_BIN_DIR)/*.out)
@@ -31,7 +33,7 @@ all: compile
 
 compile: $(EXE)
 
-$(EXE): $(OBJ)
+$(EXE): $(OBJ_WITHOUT_PY)
 	$(CC) $^ -o $(BIN_DIR)/$@.out $(LIB)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
@@ -39,7 +41,7 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 
 test: $(TEST_EXE)
 
-$(TEST_EXE): $(TEST_OBJ) $(OBJ_WITHOUT_MAIN)
+$(TEST_EXE): $(TEST_OBJ) $(OBJ_WITHOUT_MAIN_PY)
 	$(CC) $^ -o $(TEST_BIN_DIR)/$@.out $(TEST_LIB) $(LIB)
 
 $(TEST_OBJ_DIR)/%.o: $(TEST_SRC_DIR)/%.c
